@@ -25,6 +25,8 @@ git-annex (5.20150618) UNRELEASED; urgency=medium
   * merge: Avoid creating the synced/master branch.
   * add: Stage symlinks the same as git add would, even if they are not a
     link to annexed content.
+  * sync: When annex.autocommit=false, avoid making any commit of local
+    changes, while still merging with remote to the extent possible.
 
  -- Joey Hess <id@joeyh.name>  Thu, 02 Jul 2015 12:31:14 -0400
 
